2008-11-16  higepon  <higepon@users.sourceforge.jp>

        * Added: bytevector-ieee-single-native-ref and bytevector-ieee-double-native-ref.

        * Modified bytevector 64bit ref/set! procedures using new numeric tower.

        * Reading all kind of numbers works fine.

        * NumberReader.y: Implemented read8 / read16.

        * compiler.scm (pass1/asm-n-args): Fixed (- obj) quotation bug.

2008-11-16  kokosabu  <kokosabu@gmail.com>

        * Added : fx>?, fx<?, fx>=?, fx<=?.

2008-11-15  higepon  <higepon@users.sourceforge.jp>

        * fixed suffix bug of read number.

        * reading number10 works fine(Almost). But it needs more and more tests.

2008-11-15  kokosabu  <kokosabu@gmail.com>

        * FixnumProcedures.cpp, FixnumProcedures.h : Added.

        * Added : fx=?.

2008-11-14  higepon  <higepon@users.sourceforge.jp>

        * Added read of 10. +nan.0, +inf.0, 2/3

        * ByteVectorProcedures.cpp (bytevectorU32NativeRefEx): Fixed for Bignum.

        * Makefile.am (mosh_CFLAGS): Changed -O3 => -O2. Because it causes miss compilation of NumberReader.tab.cpp with g++ 4.1.3.

2008-11-13  kokosabu  <kokosabu@gmail.com>

        * Fixed max, min.

2008-11-13  higepon  <higepon@users.sourceforge.jp>

        * Implemented all of reading number2.

        * Added read of #i#b-01 style.

        * Added read of #i#b01 style.

        * Added read of #b01 style.

2008-11-12  higepon  <higepon@users.sourceforge.jp>

        * NumberScanner.re : Added.

        * NumberReader.y: Added.

2008-11-11  higepon  <higepon@users.sourceforge.jp>

        * Added : complex?, real?, integer?, real-valued?, rational-valued? adn integer-valued?.

        * Implemented All of procedures defined in R6RS lib 11.4 Exact bitwise arithmetic.

        * Added : bitwise-arithmetic-shift-right, bitwise-arithmetic-shift.

2008-11-10  higepon  <higepon@users.sourceforge.jp>

        * Added : bitwise-arithmetic-shift-left.
