@@ -1702,8 +1702,29 @@
 (define t2.23607 (inexact (/ 223607 100000)))
 ]
 
-(#t (almost=? 3.14 (bytevector-ieee-single-native-ref #vu8(#xc3 #xf5 #x48 #x40) 0)))
-(#t (almost=? 3.14 (bytevector-ieee-double-native-ref #vu8(0 0 0 0 0 0 0 0 #x1f #x85 #xeb #x51 #xb8 #x1e #x9 #x40) 8)))
+(#t (almost=? 3.14 (bytevector-ieee-single-ref #vu8(#xc3 #xf5 #x48 #x40) 0 'little)))
+(#t (almost=? 3.14 (bytevector-ieee-single-ref #vu8(#x40 #x48 #xf5 #xc3) 0 'big)))
+(#t (almost=? 3.14 (bytevector-ieee-double-ref #vu8(0 0 0 0 0 0 0 0 #x1f #x85 #xeb #x51 #xb8 #x1e #x9  #x40) 8 'little)))
+(#t (almost=? 3.14 (bytevector-ieee-double-ref #vu8(0 0 0 0 0 0 0 0 #x40 #x9  #x1e #xb8 #x51 #xeb #x85 #x1f) 8 'big)))
+(#t (almost=? 3.14 (let ([b (make-bytevector 8)])
+                     (bytevector-ieee-single-native-set! b 4 3.14)
+                     (bytevector-ieee-single-native-ref b 4))))
+(#t (almost=? 3.14 (let ([b (make-bytevector 8)])
+                     (bytevector-ieee-single-set! b 4 3.14 'little)
+                     (bytevector-ieee-single-ref b 4 'little))))
+(#t (almost=? 3.14 (let ([b (make-bytevector 8)])
+                     (bytevector-ieee-single-set! b 4 3.14 'big)
+                     (bytevector-ieee-single-ref b 4 'big))))
+(#t (almost=? 3.14 (let ([b (make-bytevector 16)])
+                     (bytevector-ieee-double-native-set! b 8 3.14)
+                     (bytevector-ieee-double-native-ref b 8))))
+(#t (almost=? 3.14 (let ([b (make-bytevector 16)])
+                     (bytevector-ieee-double-set! b 8 3.14 'little)
+                     (bytevector-ieee-double-ref b 8 'little))))
+(#t (almost=? 3.14 (let ([b (make-bytevector 16)])
+                     (bytevector-ieee-double-set! b 8 3.14 'big)
+                     (bytevector-ieee-double-ref b 8 'big))))
+
 ;; complex
 (#t (= (make-complex 1 1) (make-complex 1 1)))
 (#t (= 3 (make-complex 3 0)))
